--- a/github.html
+++ b/github.html
@@ -12,6 +12,7 @@
     <script src="assets/js/github-information.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rosie Odenkirk</title>
 </head>
 
 <body>
